Changelog for changes with respect to version 3.0
-------------------------------------------------
Jul 20 2013
- Code fully located in Photospp namespace
Jul 12 2013
- version 3.54 is free of fortran, but need to be tested/cleaned.
Nov 04 2012
- Photos::setRandomGenerator() added, it can substitute native random 
  number generator with the user provided one.
Nov 02 2012
- ME correction for W fixed; it can work for multichannel samples as well
- Boosting os grandaughters for ultrarelativistic mothers fixed with the help
  of PHCORK(0) added to PHOOUT routine. Resulting from there 4-vectors 
  are used in kinematic modifications of C++
- Photos::forceMass and Photos::forceMassFromEventRecord now work regardless
  of  whether Photos::forceMassFrom4Vector is true or false.
Oct 28 2012
- Info, that until now ME in W decay can be used only for single channel,
  that means only one decay channel of either W+ or W- for the particular
  run.  
Aug 14 2012
- Photos will not act on Pomerons and its diffractive states. This was
  physically incorrect and even could cause NaNs to appear in the event.  
  This protection was not necessary in the past.
- Fixed bug in algorithm for kinematic adjustment introduced in 
  update of Apr 24
- Fixed bug which in rare cases caused segmentation fault on 32-bit platform
  with gcc 4.1
- Examples updated for compatibility with Tauola v1.0.7

Apr 24 2012
- kinematic adjustment for vertex where all outgoing dauhters self-decay
  introduced, self decay vertices for photons generated by photos are added. 
Apr 22 2012
- Momentum conservation check for all stable particles in the event
  added to the examples.

Apr 19 2012
  Further extension for non-standard event record trees:
- Boosting of subsequent daughters of verices treated by photos
  is now hardy for multimother splittings (that is loops in a tree)
- It is not hardy (yet) for secondary intgeractions like it case of ttbar 
  production vertex.