@@ -1,5 +1,12 @@
 Changelog for changes with respect to version 3.0
 -------------------------------------------------
+
+Nov 21 2013
+- Added compatibility for FORTRAN generators that use different standard
+  of setting mother ID in HEPEVT event record
+- LCG scripts updated
+- Number of compilation warnings removed
+- Code tested within both C++ and Fortran environments
 Jul 20 2013
 - Code fully located in Photospp namespace
 Jul 12 2013
